add speciality section

--- a/Responsive_wesbite/style.css
+++ b/Responsive_wesbite/style.css
@@ -18,6 +18,30 @@ img{
     width:100%;
 }
 
+.section-title 
+{
+    text-align: center;
+    margin: 2rem auto;
+    font-family: 'Rancho', cursiv;
+    letter-spacing: 1px;
+    font-size: 2rem;
+    font-weight: lighter;
+}
+
+.section-title span{
+    display: block;
+    color: #E76F51;
+    margin-top: 0.5rem;
+}
+
+.btn{
+    background-color: #2A9D8F;
+    column-rule-color: white;
+    padding: 0.5rem 1.5rem;
+    border: none;
+    border-radius: 10px;
+}
+
 /*header style start*/
 header nav ul li{
     display: none;
@@ -75,6 +99,62 @@ header nav ul li{
     margin: 3rem 0;
 }
 
+/*Specialities Style Start*/
+.speciality-category{
+    color: #E76F51;
+    font-size: 0.9rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-bottom: 0.5rem;
+    position: relative;   
+}
+.speciality-category::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0.5rem;
+    border-bottom: 1px solid black;
+}
+.speciality-description{
+    font-size: 1.1rem;
+    font-weight: lighter;
+    padding-bottom: 1rem;
+}
+.speciality-title{
+    font-size: 2.6rem;
+    display:block;
+    position: relative;
+    padding-bottom: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.speciality-title::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0.5rem;
+    border-bottom: 1px solid black;
+}
+.price{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 1rem;
+    
+}
+
+.speciality-img{
+    box-shadow: 5px 5px 15px rgba(200,200,200,0.8);
+
+    
+}
+
+/*Specialities Style End*/
+
 
 
 
@@ -128,10 +208,36 @@ header nav ul li{
     }
 
 
+    .specialities{
+        padding: 2rem;
+        background-color: #EFEFef;
+    }
 
+    .speciality-item{
+        display: flex;
+        align-items: center;
+        gap: 4rem;
+        margin-bottom: 2rem;
+    }
+
+    .speciality-image{
+        width: 375px;
+    }
+
+    .price{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .price span{
+        margin-bottom: 1rem;
+    }
+
+    .speciality-item:last-child .speciality-img{
+        order: 1;       
+    }
+
+    .speciality-item:last-child .speciality-info{
+        order: 2;       
+    }
 }
-
-
-
-
-
