--- a/Responsive_wesbite/style.css
+++ b/Responsive_wesbite/style.css
@@ -155,6 +155,60 @@ header nav ul li{
 
 /*Specialities Style End*/
 
+/*Menu Style Start*/
+.menu-title{
+    font-size: 2.5rem;
+    font-weight: lighter;
+}
+.menu-item{
+    display: flex;
+    margin: 2rem 0;
+    position: relative;
+    align-items: center;
+    padding: 0 2rem 2rem 2rem;
+
+    
+}
+.menu-item::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0.5rem;
+    border-bottom: 1px dashed black;
+}
+
+.menu-item:last-child::after{
+    border: none;
+    
+}
+
+.menu-item img{
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    margin-right: 1rem;
+
+}
+
+.menu-item section h3{
+    margin-bottom: 1rem;
+}
+
+.menu-item section h3 span{
+    margin-left: 3rem;
+    font-weight: lighter;
+    color: #333333;
+}
+
+.menu-item p{
+    color: #333333;
+
+}
+
+/*Menu Style Start*/
+
 
 
 
@@ -240,4 +294,20 @@ header nav ul li{
     .speciality-item:last-child .speciality-info{
         order: 2;       
     }
+
+    .menu-container {
+        display:flex;
+        padding:2rem;
+    }
+
+    .menu-title{
+        text-align: center;
+    }
+
+    .menu-item::after{
+        width: 75%;
+        margin: 0 auto;
+    }
+
+
 }
