--- a/Responsive_wesbite/style.css
+++ b/Responsive_wesbite/style.css
@@ -273,11 +273,66 @@ header nav ul li{
 }
 
 .expert-social :last-child{
-    colour: #55acee;
+    color: #55acee;
+}
+/*Expert Style End*/
+
+
+/*Reservation Style Start*/
+.reservation{
+    position:relative;
+    margin-bottom: 1rem;
 }
 
+.reservation-img{
+    height:80vh; 
+}
 
-/*Expert Style End*/
+.reservation-form-section{
+    position:absolute;
+    top: 0;
+    background-color: rgb(0, 0, 0, 0.6);
+    width: 100%;
+    height:100%;
+}
+
+.reservation-form-section h2{
+    color: white;
+    margin-bottom: 0%;
+}
+
+form{   
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 1.5rem 1.5rem 1.5rem
+}
+
+input[type=text],
+input[type=email],
+input[type=number],
+textarea{
+    padding:10px;
+    margin-bottom: 1.6rem;
+    border-radius: 5px;
+    border:none;    
+}
+/*Reservation Style End*/
+
+.form-input-half{
+    width: calc(50%-0.7rem)
+}
+
+.half-input :first-child{
+    margin-right: 1rem;
+}
+
+input[type="submit"]{
+    align-self: flex-end;
+}
+
+input[type="submit"]:hover{
+    background-color: #E76F51;
+}
 
 
 
@@ -378,6 +433,26 @@ header nav ul li{
         margin: 0 auto;
     }
 
+    .experts{
+        padding:2rem;
+    }
 
+    .experts-container{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .expert-img{
+        height: 350px;
+    }
+
+    .reservation-form-section{
+        position: absolute;
+        top:50px;
+        right:50px;
+        background-color: rgb(0, 0, 0, 0.75);
+        width: 40%;
+        height: 90%;
+    }
 
 }
