add footer section

--- a/Responsive_wesbite/style.css
+++ b/Responsive_wesbite/style.css
@@ -334,6 +334,73 @@ input[type="submit"]:hover{
     background-color: #E76F51;
 }
 
+footer{
+    background-color: #333333;
+    padding: 1rem 2rem;
+    color: white;
+}
+
+.footer-info-p{
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.footer-brand{
+    font-family: "Rancho", cursive;
+    font-size: 4rem;
+    display: block;
+}
+
+.footer-social{
+    display:flex;
+    justify-content: space-evenly;
+    width:75%;
+    margin: 1rem auto;
+    font-size: 2.5rem;
+}
+
+
+.footer-title{
+    color: #E76F51;
+    position: relative;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.footer-title::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 0.5rem;
+    border-bottom: 1px solid white;
+    width:25%;
+}
+
+.footer-times{
+    list-style: none;
+}
+
+.footer-times li{
+    padding-bottom: 1rem;
+}
+
+.footer-map{
+    width:50%;
+    display:block;
+    margin: 1rem auto; 
+}
+
+.direction{
+    margin-bottom: 1rem;
+}
+
+.copyright{
+    text-align: center;
+    color: rbg(255,255,255,0.8);
+}
 
 
 
@@ -454,5 +521,18 @@ input[type="submit"]:hover{
         width: 40%;
         height: 90%;
     }
+
+    .footer-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        gap: 2rem;
+    }
+
+    .footer-1,.footer-2,.footer-3{
+        flex:1 1 350px;
+    }
+
 
 }
